refactor: 🔥 remove non-functional SecurityManager sandbox
The java.lang.SecurityManager has been deprecated and is non-functional on
modern JDKs, so HelmaSecurityManager and the System.setSecurityManager wiring
in Server only produced dead code and deprecation warnings.

Remove both and document the trust model: a single trusted application per
server, with isolation between tenants delegated to the container runtime and
orchestrator. Also clarify in apps-properties docs that apps sharing a server
share a JVM and are not security-isolated.

Signed-off-by: Daniel Ruthardt <daniel@olfrygt.dk>